<resources>
    <string name="app_name">A1 BROILERS</string>
    <string name="applicationname">@string/app_name</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="emailid">Email Id</string>
    <string name="contactno">Mobile No</string>
    <string name="address1">Address</string>
    <string name="address2">Address2</string>
    <string name="landmark">Land Mark</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="sign_up">Sign Up</string>
    <string name="area">Area</string>
    <string name="entername">Enter Name</string>
    <string name="entercontactno">Enter Mobile No</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enteraddress1">Enter Address1</string>
    <string name="enteraddress2">Enter Address2</string>
    <string name="entercity">Enter City</string>
    <string name="enterlandmark">Enter Landmark</string>
    <string name="choosetime">Expected Time</string>
    <string name="back">Back</string>
    <string name="order">Order</string>
    <string name="conformorder">Confirm Order</string>
    <string name="addmoreitems">Add More Items</string>
    <string name="chectout">Checkout</string>
    <string name="changenow">Change Now</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="orderhistory">My Orders</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="update">Update</string>
    <string name="serviceavailableinlocalities">Service Available in Below Localities</string>
    <string name="canceledorders">Cancelled Orders</string>
    <string name="feedback">Feedback</string>













    <string name="rd_repeat">Repeat</string>
    <string name="rd_daily">Daily</string>
    <string name="rd_weekly">Weekly</string>
    <string name="rd_monthly">Monthly</string>
    <string name="rd_yearly">Yearly</string>
    <string name="rd_none">None</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_days">days</string>
    <string name="rd_week">week</string>
    <string name="rd_weeks">weeks</string>
    <string name="rd_month">month</string>
    <string name="rd_months">months</string>
    <string name="rd_year">year</string>
    <string name="rd_years">years</string>
    <string name="rd_forever">Forever</string>
    <string name="rd_until">Until</string>
    <string name="rd_until_full">Until a date</string>
    <string name="rd_for">For</string>
    <string name="rd_for_full">For a number of events</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_month_first">on every first %s</string>
    <string name="rd_month_second">on every second %s</string>
    <string name="rd_month_third">on every third %s</string>
    <string name="rd_month_fourth">on every fourth %s</string>
    <string name="rd_event">event</string>
    <string name="rd_events">events</string>
    <string name="title_activity_main_activity2">Register</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_activity22">MainActivity22Activity</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_order_history">OrderHistory</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_terms">Terms And Conditions</string>
    <string name="nav_header_desc">Navigation Header</string>
</resources>
