<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:elevation="4dp"
        android:paddingTop="5dp"
        android:id="@+id/tool_bar">

        <TextView
            android:id="@+id/actionbar_notifcation_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginTop="0dip"
            android:layout_marginRight="6dip"
            android:clickable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="3dip"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="16dip"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <com.gc.materialdesign.views.ScrollView
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delivery Address"
                style="@android:style/TextAppearance.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name"
                android:id="@+id/txt_name"
                android:textSize="18dp"
                android:fontFamily="@font/baloo_tamma_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingLeft="100dp"

               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactno"
                android:visibility="gone"
                android:id="@+id/txt_mobile"
                android:textSize="18dp"
                android:paddingLeft="100dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address1"
                android:visibility="gone"
                android:id="@+id/txt_address"
                android:textSize="18dp"
                android:paddingLeft="100dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address2"
                android:id="@+id/txt_address2"
                android:textSize="18dp"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:visibility="gone"
                android:id="@+id/txt_city"
                android:textSize="18dp"
                android:paddingLeft="100dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landmark"
                android:id="@+id/txt_landmark"
                android:visibility="gone"
                android:textSize="18dp"
                android:paddingLeft="100dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Delivery Address"
                android:id="@+id/txt_changedelivery"
                android:layout_gravity="right"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="17dp"
                android:textColor="@android:color/holo_red_dark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delivery Date"
                style="@android:style/TextAppearance.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="date"
                android:visibility="gone"
                android:id="@+id/txt_date"
                android:textSize="18dp"
                android:paddingLeft="100dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.rey.material.widget.RadioButton
                    android:id="@+id/switches_rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Today"
                    android:textSize="15sp"
                    android:checked="true"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    app:v_styleId="@array/radio_button"/>

                <com.rey.material.widget.RadioButton
                    android:id="@+id/switches_rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tomorrow"
                    android:textSize="15sp"
                    android:checked="false"
                    android:gravity="center_vertical"
                    app:v_styleId="@array/radio_button"/>
            </LinearLayout>
            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delivery Time"
                style="@android:style/TextAppearance.Medium"/>-->

            <Spinner
                android:id="@+id/choosetime"
                style="@style/Material.Widget.Spinner"
                android:layout_width="match_parent"
                android:minHeight="40dp"
                app:spn_label="@string/choosetime"
                app:spn_labelTextSize="18dp"
                app:spn_labelEnable="true"
                app:spn_labelTextColor="@color/black_semi_transparent"
                android:layout_height="wrap_content"
                app:spn_arrowColor="@color/underlineColor"
                app:spn_arrowSize="0dp"
                app:spn_dividerColor="@android:color/transparent"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"/>

            <Spinner
                android:id="@+id/pincode"
                style="@style/Material.Widget.Spinner"
                android:layout_width="match_parent"
                android:minHeight="40dp"
                app:spn_label="@string/area"
                app:spn_labelTextSize="18dp"
                app:spn_labelEnable="true"
                android:layout_height="wrap_content"
                app:spn_labelTextColor="@color/black_semi_transparent"
                app:spn_arrowColor="@color/underlineColor"
                app:spn_arrowSize="0dp"
                app:spn_dividerColor="@android:color/transparent"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/additional_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="3"
                android:minLines="3"
                android:hint="Additional Info"
                android:layout_marginBottom="10dp"
                app:met_floatingLabel="highlight"
                app:met_clearButton="true"
                app:met_baseColor="@color/baseColor"
                app:met_primaryColor="@color/floatingLabelTextColor"
                app:met_textColor="@color/text_color"
                app:met_textColorHint="@color/textColorHint"
                app:met_errorColor="@color/errorColor"
                app:met_helperTextColor="@color/helperTextColor"
                app:met_underlineColor="@color/underlineColor"
                app:met_floatingLabelTextColor="@color/floatingLabelTextColor"/>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/checkbox_cod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="Cash On Delivery"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="visible" />

                <RadioButton
                    android:id="@+id/checkbox_paytm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="Online Payment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="visible" />
            </RadioGroup>

        </LinearLayout>
    </com.gc.materialdesign.views.ScrollView>
    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@color/color_primary"
        android:text="@string/conformorder"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
         />

</LinearLayout>
