<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Delivery Address"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_primary"
            android:textSize="25sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/contactno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/contactno"
                        android:layout_marginBottom="5dp"
                        app:met_floatingLabel="highlight"
                        app:met_clearButton="true"
                        app:met_baseColor="@color/baseColor"
                        app:met_primaryColor="@color/floatingLabelTextColor"
                        app:met_textColor="@color/text_color"
                        app:met_textColorHint="@color/textColorHint"
                        app:met_errorColor="@color/errorColor"
                        app:met_helperTextColor="@color/helperTextColor"
                        app:met_underlineColor="@color/underlineColor"
                        app:met_floatingLabelTextColor="@color/floatingLabelTextColor"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/address1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/address1"
                        android:layout_marginBottom="5dp"
                        app:met_floatingLabel="highlight"
                        app:met_clearButton="true"
                        app:met_baseColor="@color/baseColor"
                        app:met_primaryColor="@color/floatingLabelTextColor"
                        app:met_textColor="@color/text_color"
                        app:met_textColorHint="@color/textColorHint"
                        app:met_errorColor="@color/errorColor"
                        app:met_helperTextColor="@color/helperTextColor"
                        app:met_underlineColor="@color/underlineColor"
                        app:met_floatingLabelTextColor="@color/floatingLabelTextColor"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/address2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/address2"
                        android:layout_marginBottom="5dp"
                        app:met_floatingLabel="highlight"
                        app:met_clearButton="true"
                        app:met_baseColor="@color/baseColor"
                        app:met_primaryColor="@color/floatingLabelTextColor"
                        app:met_textColor="@color/text_color"
                        app:met_textColorHint="@color/textColorHint"
                        app:met_errorColor="@color/errorColor"
                        app:met_helperTextColor="@color/helperTextColor"
                        app:met_underlineColor="@color/underlineColor"
                        app:met_floatingLabelTextColor="@color/floatingLabelTextColor"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/city"
                        android:layout_marginBottom="5dp"
                        app:met_floatingLabel="highlight"
                        app:met_clearButton="true"
                        app:met_baseColor="@color/baseColor"
                        app:met_primaryColor="@color/floatingLabelTextColor"
                        app:met_textColor="@color/text_color"
                        app:met_textColorHint="@color/textColorHint"
                        app:met_errorColor="@color/errorColor"
                        app:met_helperTextColor="@color/helperTextColor"
                        app:met_underlineColor="@color/underlineColor"
                        app:met_floatingLabelTextColor="@color/floatingLabelTextColor"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/landmark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/landmark"
                        android:layout_marginBottom="5dp"
                        app:met_floatingLabel="highlight"
                        app:met_clearButton="true"
                        app:met_baseColor="@color/baseColor"
                        app:met_primaryColor="@color/floatingLabelTextColor"
                        app:met_textColor="@color/text_color"
                        app:met_textColorHint="@color/textColorHint"
                        app:met_errorColor="@color/errorColor"
                        app:met_helperTextColor="@color/helperTextColor"
                        app:met_underlineColor="@color/underlineColor"
                        app:met_floatingLabelTextColor="@color/floatingLabelTextColor"/>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_horizontal"
        android:layout_gravity="center_horizontal|center_horizontal"
        android:paddingTop="10dp"
        android:orientation="horizontal">
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="25px"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@color/color_primary"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/email_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="25px"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@color/color_primary"
            android:text="@string/changenow"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
